# milestone-3-dang0ta

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  app_config.py  app_config_dev.py  app_config_prod.py  auth.py  config.py  conftest.py  db.py  docker-compose.yaml  exceptions.py  main.py  models.py  pyproject.toml  revobank.postman.json
.github/workflow/: pytest.yaml
.github/workflows/: pytest.yaml
auth_jwt/: __init__.py  blacklist.py  route.py  tokens.py
db/: accounts.py  bills.py  budgets.py  credentials.py  db.py  models.py  transactions.py  users.py
docs/: activity_diagram.md  api_documentation.md  db_models.md  testing.md
docs/security-reviews/: recommendations.md
rbac/: route.py
routes/: __init__.py  accounts.py  auth.py  bills.py  budgets.py  transactions.py  user.py
scripts/: html-cov.sh
shared/: exceptions.py
src/: app.py  app_config_dev.py  app_config_prod.py  auth.py  db.py
tests/: test_account_management.py  test_app.py  test_auth.py  test_bill_management.py  test_budget_management.py  test_db.py  test_db_inmemory.py  test_exceptions.py  test_route_accounts.py  test_route_auth.py  test_route_transactions.py  test_route_users.py  test_transaction_management.py  test_user_management.py
tests/fixtures/: transactions.py
