[project]
name = "revobank-api"
version = "0.1.0"
description = "RESTful API for RevoBank application"
readme = "README.md"
authors = [
    {name = "RevoBank Team"}
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-cors>=4.0.2",
    "flask-jwt-extended>=4.7.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.uv]
# UV-specific settings can go here if needed in the future
